# nu-alias-converter

./: .gitignore  .tokeignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODO.md  alias.nu  flake.nix  justfile
.github/workflows/: generate-git-cliff.yml
src/: main.rs
src/command/: arguments.rs  mod.rs
src/config/: alias_ignore.rs  mod.rs
src/output/: writer.rs
src/syntax_tree/: alias.rs  mod.rs  nushell.rs  printer.rs  process_file.rs  traverser.rs
src/test/examples/: .bash_aliases  .bashrc  bash_aliases  broken_error_comments  mega_bash_aliases
src/test/examples/aliases_dir/: .bash_aliases  .bashrc
treesitter/: Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py
treesitter/bindings/c/: tree-sitter-bash_aliases_converter.h  tree-sitter-bash_aliases_converter.pc.in
treesitter/bindings/go/: binding.go  binding_test.go
treesitter/bindings/node/: binding.cc
treesitter/bindings/python/tests/: test_binding.py
treesitter/bindings/python/tree_sitter_bash_aliases_converter/: __init__.py  binding.c
treesitter/bindings/rust/: build.rs  lib.rs
treesitter/bindings/swift/TreeSitterBashAliasesConverterTests/: TreeSitterBashAliasesConverterTests.swift
treesitter/src/: grammar.json  parser.c
