[package]
name = "nu-alias-converter"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Converts Bash aliases to Nushell"
readme = "README.md"
repository = "https://github.com/marcelarie/nu-alias-converter"

[dependencies]
chrono = "0.4.38"
nu-cmd-lang = "0.98.0"
nu-command = "0.98.0"
nu-parser = "0.98.0"
nu-protocol = "0.98.0"
rayon = "1.10.0"
tree-sitter = "0.24.2"
tree-sitter-bash = "0.23.1"
# tree-sitter-nu = { git = "https://github.com/nushell/tree-sitter-nu" }
